<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="StringFormatInvalid">
    <string name="action_settings">Settings</string>
    <string name="action_game">Single Game</string>
    <string name="action_about">About</string>
    <string name="action_add_server">Add Server</string>
    <string name="dont_start_game">unable to start game</string>
    <string name="check_res">Check Resources</string>
    <string name="check_things">Check %s ...</string>
    <string name="core_config">Core Config</string>
    <string name="tip_new_deck">New Decks</string>
    <string name="cards_cdb">cards.cdb</string>
    <string name="scripts">scripts</string>
    <string name="images">images</string>
    <string name="single_lua">single files</string>
    <string name="font_files">font files</string>
    <string name="game_sound">sound files</string>
    <string name="game_skins">skin files</string>
    <string name="coping_pendulum_image">Coping pendulum image</string>
    <string name="dialog_select_file">Select a file</string>
    <string name="dialog_select_image">Select a iamge</string>
    <string name="dialog_select_database">Select a database file</string>
    <string name="copy_databse">copying databse</string>
    <string name="card_cover">Card Cover</string>
    <string name="game_bg">Game Background</string>
    <string name="bg">Duel Background</string>
    <string name="bg_menu">Menu Background</string>
    <string name="bg_deck">Deck Background</string>
    <string name="no_find_image_selector">no find image selector</string>
    <string name="no_find_file_selectotr">no find file selector</string>
    <string name="no_find_image_cutor">no find image cutor</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="quit_tip">Quit app?</string>
    <string name="last_path">Last Folder</string>
    <string name="create_folder">New Folder</string>
    <string name="intpu_name">Input name</string>
    <string name="tab_search">Search</string>
    <string name="tab_result">Result</string>
    <string name="tab_manager">Deck</string>
    <string name="the_name_is_folder">this name is folder</string>
    <string name="back_tip">Press back key again to exit.</string>
    <string name="string_help_text">The current application lacks the necessary permissions. \n
        please click Settings - permissions - open the required permissions.</string>
    <string name="fetch_ex_card">Fetching pre-cards via web</string>
    <string name="ex_card_list_title">Card List</string>
    <string name="ex_card_log_title">update log</string>
    <string name="ex_card_report_title">Reoprt</string>
    <string name="ex_card_check_toast_message">before join in this server, please "used Expansions" in settings first</string>
    <string name="ex_card_check_toast_message_ii">before join in this server, please download expansions first</string>
    <string name="ex_card_check_toast_message_iii">obtain expansion cards failed, opening 233 website to download now.</string>
    <string name="settings_about">About</string>
    <string name="settings_about_sub_about">About</string>
    <string name="settings_game_enable_sound_effect">Enable sound effect</string>
    <string name="settings_game_screen_orientation">Lock screen in duel</string>
    <string name="settings_game_font_antialias">Font antialias</string>
    <string name="settings_game_lab_pendulum_scale">Pendulum Scale Images</string>
    <string name="settings_native_game_mode">Native UI Game Mode</string>
    <string name="settings_native_game_mode_summary">Use Android native UI instead of Irrlicht engine (experimental)</string>
    <string name="settings_game_font_antialias_summary">Disable this option can increase the frame rate</string>
    <string name="settings_about_author_pref">Author</string>
    <string name="settings_about_version_pref">Version</string>
    <string name="donation">Donation</string>
    <string name="settings_about_check_update">Check update</string>
    <string name="settings_about_change_log">Change log</string>
    <string name="settings_game_card_quality">Card texture quality</string>
    <string name="settings_game_font_name">Game Font</string>
    <string name="settings_game">Game Settings</string>
    <string name="settings_game_res_path">Game path</string>
    <string name="settings_game_core_version">Game Core Version</string>
    <string name="settings_category_diy">DIY</string>
    <string name="settings_game_diy_cover">Game Background</string>
    <string name="settings_game_diy_card_back">Card Cover</string>
    <string name="settings_game_diy_card_db">Use your own card database</string>
    <string name="settings_test_options">Lab</string>
    <string name="settings_test_replace_kernel">Change GameCore(Needs root)</string>
    <string name="settings_game_immersive_mode">Optimize not 16:9 resolution</string>
    <string name="settings_game_opengl">OpenGL</string>
    <string name="settings_game_avatar">Game Avatar</string>
    <string name="settings_author" translatable="false">菜菜、暗星</string>
    <string name="settings_record_number" translatable="false">浙ICP备2023031884号-2A</string>
    <string name="restart_app">"Please restart app！"</string>
    <string-array name="opengl_version">
        <item>OpenGL ES 1.X</item>
        <item>OpenGL ES 2.0 fixed shaders</item>
        <item>OpenGL ES 2.0 builtin shaders</item>
    </string-array>
    <string-array name="card_quality">
        <item>Speed</item>
        <item>Quality</item>
    </string-array>
    <string-array name="data_language" translatable="false">
        <item>简体中文</item>
        <item>조선말</item>
        <item>English</item>
        <item>Español</item>
        <item>日本語</item>
        <item>Português</item>
    </string-array>
    <string-array name="screen_top_bottom_desc" translatable="false">
        <item>Disable</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>15</item>
    </string-array>
    <string name="server_list">Duel Servers</string>
    <string name="server_name">Name:</string>
    <string name="server_desc">Note:</string>
    <string name="server_ip">Host:</string>
    <string name="server_user">User:</string>
    <string name="server_room_name">Room Name:</string>
    <string name="server_port">Port:</string>
    <string name="server_room_pwd">Password:</string>
    <string name="server_user_pwd">Password:</string>
    <string name="server_info_edit">Server Info Edit</string>
    <string name="save">Save</string>
    <string name="must_info">must info</string>
    <string name="optional_info">optional info</string>
    <string name="server_is_exist">the server is exist</string>
    <string name="server_info_error">server info is bad.</string>
    <string name="card_search">Card Search</string>
    <string name="deck_manager">Deck</string>
    <string name="category_manager"> Categorized Deck Select</string>
    <string name="search">Search</string>
    <string name="search_open">Select</string>
    <string name="search_close">Close</string>
    <string name="hit_keyword1">keywords(separated by SPACE)</string>
    <string name="hit_atk">ATK</string>
    <string name="hit_def">DEF</string>
    <string name="reset">Reset</string>
    <string name="label_race">Race:</string>
    <string name="label_ot">Rule:</string>
    <string name="label_limit">Limit Type</string>
    <string name="label_limitlist">Limit List:</string>
    <string name="label_type">Card Type:</string>
    <string name="label_set">Series:</string>
    <string name="label_set_No_Setcode">#No Series included</string>
    <string name="label_level">Level/Rank/LinkArrows:</string>
    <string name="label_attr">Attribute:</string>
    <string name="linkmarker">LinkArrows:</string>
    <string name="label_category">Category</string>
    <string name="searching">Search Cards</string>
    <string name="card_faq">FAQ</string>
    <string name="no_webbrowser">No web browser</string>
    <string name="load_game">loading game</string>
    <string name="new_deck">New</string>
    <string name="move_deck">move Deck</string>
    <string name="copy_deck">copy Deck</string>
    <string name="rename_deck">Rename</string>
    <string name="delete_deck">Delete</string>
    <string name="save_deck">Save Deck</string>
    <string name="save_as_deck">Deck save as</string>
    <string name="deck_list">Deck List</string>
    <string name="card_add_main">+Main Deck</string>
    <string name="card_add_side">+Side Deck</string>
    <string name="deck_main" formatted="false">Main:%d  Monster:%d Spell:%d Trap:%d</string>
    <string name="deck_extra" formatted="false">Extra:%d  Fusion:%d Synchro:%d Xyz:%d Link:%d</string>
    <string name="deck_side" formatted="false">Side:%d  Monster:%d Spell:%d Trap:%d</string>
    <string name="card_result">Cards List</string>
    <string name="unsort">Unsort</string>
    <string name="sort">Sort</string>
    <string name="loading">loading..."</string>
    <string name="loading_failed">loading failed"</string>
    <string name="question">Question</string>
    <string name="question_delete_deck">delete this deck?</string>
    <string name="noname">noname</string>
    <string name="menu">Options</string>
    <string name="save_tip_ok">save deck ok</string>
    <string name="save_tip_fail">save deck fail</string>
    <string name="add_card_tip_ok">add card ok</string>
    <string name="add_card_tip_fail">add card fail</string>
    <string name="tip_card_max" formatted="false">card max count:%d</string>
    <string name="tip_credit_max" formatted="false">Exceeds %d limit</string>
    <string name="tip_drag_main_full" formatted="false">Main deck is full (max %d)</string>
    <string name="tip_drag_extra_full" formatted="false">Extra deck is full (max %d)</string>
    <string name="tip_drag_side_full" formatted="false">Side deck is full (max %d)</string>
    <string name="tip_drag_extra_in_main">Extra deck cards can not be placed in the main deck</string>
    <string name="tip_drag_normal_in_extra">Normal cards can not be placed in the extra deck</string>
    <string name="file_exist">file is exist</string>
    <string name="share_deck">Share Deck</string>
    <string name="no_share_app">no find share app</string>
    <string name="intput_room_name">Input room name</string>
    <string name="join">join</string>
    <string name="quick_join">join game</string>
    <string name="clear_deck">Clear</string>
    <string name="reset_game_res">Reset Resources</string>
    <string name="mycard">MyCard</string>
    <string name="arena">Duelist DataBase</string>
    <string name="mc_home">Home</string>
    <string name="mc_chat">ChatRoom</string>
    <string name="bbs">Community</string>
    <string name="title_use_ex">Use Expansions</string>
    <string name="Join_QQ">QQ Group</string>
    <string name="bgSelect">click background and select files</string>
    <string name="about_immersive_mode">it will hide virtual-key</string>
    <string name="masterrule">Master Rule</string>
    <string name="tutorial">Soft Tutorial</string>
    <string name="about_help">Click button which you want to know</string>
    <string name="invalid_shortcut">Invalid Shortcut</string>
    <string name="Start_ServiceDuelAssistant">DuelAssistant</string>
    <string name="about_DuelAssistant">Copy PSW to Quick Join Game.
        \nCopy Deck Text to Save as YDK and Open in Deck Editor</string>
    <string name="about_pref_settings_keep_scale">Original Resolution Scale Display</string>
    <string name="title_delete_ex">delete expansions</string>
    <string name="about_delete_ex">if you need to delete all expansion cards</string>
    <string name="settings_screen_padding">Reserved height of curved screen</string>
    <string name="settings_data_language">Language</string>
    <string name="user_privacy_policy">User Privacy Policy</string>
</resources>