<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_card_search"
        android:icon="@drawable/ic_search"
        android:title="@string/card_search" />
    <item
        android:id="@+id/action_deck_manager"
        android:icon="@drawable/ic_edit"
        android:title="@string/deck_manager" />
    <item
        android:id="@+id/action_add_server"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add_server" />
    <item
        android:id="@+id/action_join_qq_group"
        android:icon="@drawable/ic_home_black"
        android:title="@string/mycard" />
    <item
        android:id="@+id/action_reset_game_res"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/reset_game_res" />

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_live_help"
                android:title="@string/help" />
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_about"
                android:title="@string/action_about" />

            <item
                android:id="@+id/action_quit"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/quit" />
        </menu>
    </item>
</menu>