<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            android:key="pref_key_reset_game_res"
            android:persistent="true"
            android:title="@string/reset_game_res" />
        <Preference
            android:key="pref_key_about_check_update"
            android:persistent="true"
            android:title="@string/settings_about_check_update" />
        <Preference
            android:key="pref_key_change_log"
            android:title="@string/settings_about_change_log" />
        <Preference
            android:key="pref_key_join_qq"
            android:title="@string/Join_QQ" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_diy">

        <Preference
            android:key="settings_game_avatar"
            android:persistent="true"
            android:title="@string/settings_game_avatar" />

        <Preference
            android:key="settings_game_diy_card_cover"
            android:persistent="true"
            android:title="@string/settings_game_diy_card_back" />

        <Preference
            android:key="settings_game_diy_card_bg"
            android:persistent="true"
            android:title="@string/settings_game_diy_cover" />

        <Preference
            android:key="pref_key_game_font_name"
            android:persistent="true"
            android:title="@string/settings_game_font_name" />

        <!--<CheckBoxPreference
            android:key="settings_game_diy_card_db"
            android:persistent="true"
            android:title="@string/settings_game_diy_card_db"/>-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_game">
        <!--Preference
            android:key="pref_key_game_res_path"
            android:persistent="true"
            android:title="@string/settings_game_res_path" /-->

        <CheckBoxPreference
            android:key="pref_settings_read_ex"
            android:persistent="true"
            android:title="@string/title_use_ex" />

        <Preference
            android:key="pref_key_settings_delete_ex"
            android:persistent="true"
            android:summary="@string/about_delete_ex"
            android:title="@string/title_delete_ex" />

        <CheckBoxPreference
            android:key="pref_key_start_serviceduelassistant"
            android:persistent="true"
            android:summary="@string/about_DuelAssistant"
            android:title="@string/Start_ServiceDuelAssistant" />

        <CheckBoxPreference
            android:key="pref_settings_keep_scale"
            android:persistent="false"
            android:title="@string/about_pref_settings_keep_scale" />

        <CheckBoxPreference
            android:key="pref_key_immersive_mode"
            android:persistent="true"
            android:summary="@string/about_immersive_mode"
            android:title="@string/settings_game_immersive_mode" />
        <ListPreference
            android:entries="@array/screen_top_bottom_desc"
            android:entryValues="@array/screen_top_bottom_value"
            android:key="pref_settings_window_top_bottom"
            android:persistent="true"
            android:title="@string/settings_screen_padding" />

        <ListPreference
            android:entries="@array/opengl_version"
            android:entryValues="@array/opengl_version_value"
            android:key="pref_key_game_ogles_config"
            android:persistent="true"
            android:title="@string/settings_game_opengl" />
        <ListPreference
            android:entries="@array/card_quality"
            android:entryValues="@array/card_quality_value"
            android:key="pref_key_game_image_quality"
            android:persistent="true"
            android:title="@string/settings_game_card_quality" />
        <!--CheckBoxPreference
            android:key="pref_settings_only_game"
            android:persistent="true"
            android:summary="@string/only_game_tip"
            android:title="@string/settings_pref_settings_only_game"/-->
        <CheckBoxPreference
            android:key="pref_key_game_screen_orientation"
            android:persistent="true"
            android:title="@string/settings_game_screen_orientation" />
        <CheckBoxPreference
            android:key="pref_key_game_font_antialias"
            android:persistent="true"
            android:summary="@string/settings_game_font_antialias_summary"
            android:title="@string/settings_game_font_antialias" />
        <CheckBoxPreference
            android:key="pref_key_game_lab_pendulum_scale"
            android:persistent="true"
            android:title="@string/settings_game_lab_pendulum_scale" />
        <!--<CheckBoxPreference
            android:key="pref_settings_deck_manager_v2"
            android:persistent="true"
            android:title="@string/deck_manager_v2"
            />-->
        <!--  <CheckBoxPreference
            android:key="pref_key_sensor_refresh"
            android:persistent="true"
            android:title="@string/settings_game_sensor_refresh"/>
      <CheckBoxPreference
            android:key="pref_key_deck_delete_dialog"
            android:persistent="true"
            android:summary="@string/settings_deck_delete_dialog_desc"
            android:title="@string/settings_deck_delete_dialog"/>

       <EditTextPreference
            android:key="pref_settings_font_size"
            android:persistent="true"
            android:title="@string/set_font_size"/>-->
        <ListPreference
            android:entries="@array/data_language"
            android:entryValues="@array/data_language_value"
            android:key="pref_key_game_data_language"
            android:persistent="true"
            android:title="@string/settings_data_language" />
        <Preference
            android:key="pref_user_privacy_policy"
            android:title="@string/user_privacy_policy" />

    </PreferenceCategory>

    <!--PreferenceCategory android:title="@string/settings_test_options">

        <Preference
            android:key="pref_key_test_replace_kernel"
            android:persistent="true"
            android:title="@string/settings_test_replace_kernel" />
    </PreferenceCategory-->
</PreferenceScreen>
