<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_about_sub_about">
        <Preference
            android:key="pref_key_about_author"
            android:summary="@string/settings_author"
            android:title="@string/settings_about_author_pref" />
        <Preference
            android:key="pref_key_about_version"
            android:persistent="true"
            android:title="@string/settings_about_version_pref" />
        <Preference
            android:key="pref_key_open_alipay"
            android:persistent="true"
            android:title="@string/donation" />
        <Preference
            android:key="pref_key_about_check_update"
            android:persistent="true"
            android:title="@string/settings_about_check_update" />
        <Preference
            android:key="pref_key_change_log"
            android:title="@string/settings_about_change_log" />
    </PreferenceCategory>
</PreferenceScreen>