<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/mc_home" />
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/mc_chat" />
    <item
        android:id="@+id/action_bbs"
        android:icon="@drawable/ic_forum"
        android:title="@string/bbs" />
    <item
        android:id="@+id/action_arena"
        android:icon="@drawable/ic_highlight"
        android:title="@string/arena" />

    <item
        android:id="@+id/action_deck_manager"
        android:icon="@drawable/ic_edit"
        android:title="@string/deck_manager" />
    <item
        android:id="@+id/action_quit"
        android:icon="@drawable/ic_close_black_24dp"
        android:title="@string/quit" />
</menu>
