<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/start"
        android:title="@string/mc_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/cardSearcher_fragment"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/mycard_fragment"
        android:icon="@drawable/mycard"
        android:title="@string/mycard"
        app:showAsAction="always" />
    <item
        android:id="@+id/setting_fragment"
        android:icon="@drawable/setting"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>