<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/label_width_middle"
            android:layout_height="wrap_content"
            android:text="@string/bg" />

        <ImageView
            android:id="@+id/bg"
            android:layout_width="240dp"
            android:layout_height="135dp" />

        <TextView
            android:layout_width="@dimen/label_width_middle"
            android:layout_height="wrap_content"
            android:text="@string/bg_menu" />

        <ImageView
            android:id="@+id/bg_menu"
            android:layout_width="240dp"
            android:layout_height="135dp" />

        <TextView
            android:layout_width="@dimen/label_width_middle"
            android:layout_height="wrap_content"
            android:text="@string/bg_deck" />

        <ImageView
            android:id="@+id/bg_deck"
            android:layout_width="240dp"
            android:layout_height="135dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/bgSelect"
        android:textSize="25px" />
</LinearLayout>