<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_head_height"
    android:orientation="vertical"
    android:paddingTop="24dp"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/nav_icon_width"
            android:layout_height="@dimen/nav_icon_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_author_pref"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/settings_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/nav_donation"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@drawable/button_n"
                android:gravity="center"
                android:text="@string/donation"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>