<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/masterrule"
                android:layout_width="@dimen/label_width_middle"
                android:layout_height="@dimen/label_width_middle"
                android:layout_gravity="center"
                android:background="@drawable/masterrule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/masterrule"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/label_width_middle"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/tutorial"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/tutorial" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/tutorial"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/about_help"
        android:textSize="10sp" />
</LinearLayout>